# gen_cert

./: .env.example  .gitignore  README.md  gen_cert.sh  nginx.conf  pyproject.toml  requirements.txt  server.py
